可読性のため分割

--- a/di-sample-apex-trigger/main/account/classes/AccountTriggerService.cls
+++ b/di-sample-apex-trigger/main/account/classes/AccountTriggerService.cls
@@ -43,7 +43,8 @@ public with sharing class AccountTriggerService implements ITriggerObserver {
    * @return ITriggerObserver
    **************************************************/
   public static ITriggerObserver getInstance(BaseTriggerHandler handler) {
-    return (ITriggerObserver)new AccountTriggerService(handler);
+    AccountTriggerService service = new AccountTriggerService(handler);
+    return (ITriggerObserver)service;
   }
 
   /*******************************************************
