--- a/di-sample-apex-trigger/main/common/classes/CommonConstants.cls
+++ b/di-sample-apex-trigger/main/common/classes/CommonConstants.cls
@@ -11,8 +11,8 @@ public without sharing class CommonConstants {
   public static final String DEBUG_MESSAGE_TYPE = 'Type: ';
 
   // CommonLogger
-  public static final System.loggingLevel LOGGING_LEVEL_DEFAULT = System.LoggingLevel.DEBUG;
   public static final String DATE_FORMAT = 'yyyy-MM-dd-HH:mm:ss';
+  public static final String LOGGER_DEFAULT = 'DEFAULT';
   public static final String MSG_NEW_INSTANCE_CREATED = 'New instance of CommonLogger is created.';
   public static final String PARTING_LINE = '------------------------------------------------------------';
   public static final String SYMBOL_SPACE = ' ';
