--- a/di-sample-apex-trigger/main/common/classes/BaseTriggerHandler.cls
+++ b/di-sample-apex-trigger/main/common/classes/BaseTriggerHandler.cls
@@ -20,10 +20,10 @@ public abstract class BaseTriggerHandler {
 
   // Instance Variables
   protected String sObjectName;
-  protected List<SObject> oldObjects;
-  protected List<SObject> newObjects;
-  protected Map<Id, SObject> oldObjectMap;
-  protected Map<Id, SObject> newObjectMap;
+  protected List<sObject> oldObjects;
+  protected List<sObject> newObjects;
+  protected Map<ID, sObject> oldObjectMap;
+  protected Map<ID, sObject> newObjectMap;
   protected Boolean triggerIsExecuting;
   protected Integer triggerSize;
   protected System.TriggerOperation triggerOperationType;
@@ -57,203 +57,6 @@ public abstract class BaseTriggerHandler {
     this.triggerIsExecuting = Trigger.isExecuting;
     this.triggerSize = Trigger.size;
     this.triggerOperationType = Trigger.operationType;
-  }
-
-  /************************************************************
-   * Name: isRecursive
-   * Description: Validate whether this is recursive or not
-   *
-   * @param  none
-   * @return Boolean
-   ************************************************************/
-  private Boolean isRecursive() {
-    methodName = 'isRecursive';
-    logger.stackDebugLog(LOGGING_LEVEL_DEFAULT, CLASS_NAME, methodName, 'firstRun: ' + BaseTriggerHandler.firstRun);
-
-    if (BaseTriggerHandler.firstRun) {
-      return false;
-    } else if (System.TriggerOperation.AFTER_UNDELETE === this.triggerOperationType) {
-      return false;
-    } else {
-      return true;
-    }
-  }
-
-  /********************************************************************************
-   * Name: invoke
-   * Description: Invoke each custom action depending on the Apex DML operations
-   *
-   * @param  none
-   * @return void
-   ********************************************************************************/
-  public void invoke() {
-    methodName = 'invoke';
-
-    System.Savepoint savepoint = Database.setSavepoint();
-    try {
-      if (this.isRecursive()) {
-        return;
-      }
-
-      this.addObservers(this.sObjectName);
-
-      switch on Trigger.operationType {
-        when BEFORE_INSERT {
-          this.onBeforeInsert();
-        }
-        when BEFORE_UPDATE {
-          this.onBeforeUpdate();
-        }
-        when BEFORE_DELETE {
-          this.onBeforeDelete();
-        }
-        when AFTER_INSERT {
-          this.onAfterInsert();
-          BaseTriggerHandler.firstRun = false;
-        }
-        when AFTER_UPDATE {
-          this.onAfterUpdate();
-          BaseTriggerHandler.firstRun = false;
-        }
-        when AFTER_DELETE {
-          this.onAfterDelete();
-          BaseTriggerHandler.firstRun = false;
-        }
-        // AFTER_UNDELETE
-        when else {
-          this.onAfterUndelete();
-          BaseTriggerHandler.firstRun = false;
-        }
-      }
-    } catch (Exception e) {
-      Database.rollback(savepoint);
-      logger.stackDebugLog(LoggingLevel.ERROR, CLASS_NAME, methodName, CommonErrorUtils.createErrorMessage(e));
-    } finally {
-      logger.fetchDebugLogs();
-    }
-  }
-
-  /*******************************
-   * Name: addObservers
-   * Description: Add observers
-   *
-   * @param  String sObjectName
-   * @return void
-   *******************************/
-  @TestVisible
-  private void addObservers(String sObjectName) {
-    methodName = 'addObservers';
-
-    for (Trigger_Observer__mdt triggerObserver : [
-      SELECT
-        Id,
-        DeveloperName,
-        Object__c,
-        Apex_Class__c,
-        Test_Only__c,
-        Active__c,
-        Before_Insert__c,
-        Before_Update__c,
-        Before_Delete__c,
-        After_Insert__c,
-        After_Update__c,
-        After_Delete__c,
-        After_Undelete__c
-      FROM
-        Trigger_Observer__mdt
-      WHERE
-        Object__c = :sObjectName
-      ORDER BY
-        DeveloperName ASC
-      LIMIT 50000
-    ]) {
-      this.addActiveTriggerOperations(triggerObserver);
-    }
-  }
-
-  private void addActiveTriggerOperations(Trigger_Observer__mdt triggerObserver) {
-    methodName = 'addActiveTriggerOperations';
-
-    if (!triggerObserver.Active__c) {
-      return;
-    }
-
-    List<System.TriggerOperation> activeTriggerOperation = new List<System.TriggerOperation>();
-
-    if (triggerObserver.Before_Insert__c) {
-      activeTriggerOperation.add(System.TriggerOperation.BEFORE_INSERT);
-    }
-
-    if (triggerObserver.Before_Update__c) {
-      activeTriggerOperation.add(System.TriggerOperation.BEFORE_UPDATE);
-    }
-
-    if (triggerObserver.Before_Delete__c) {
-      activeTriggerOperation.add(System.TriggerOperation.BEFORE_DELETE);
-    }
-
-    if (triggerObserver.After_Insert__c) {
-      activeTriggerOperation.add(System.TriggerOperation.AFTER_INSERT);
-    }
-
-    if (triggerObserver.After_Update__c) {
-      activeTriggerOperation.add(System.TriggerOperation.AFTER_UPDATE);
-    }
-
-    if (triggerObserver.After_Delete__c) {
-      activeTriggerOperation.add(System.TriggerOperation.AFTER_DELETE);
-    }
-
-    if (triggerObserver.After_Undelete__c) {
-      activeTriggerOperation.add(System.TriggerOperation.AFTER_UNDELETE);
-    }
-
-    if (triggerObserver.Test_Only__c) {
-      return;
-    }
-
-    System.Type apexClass = System.Type.forName(triggerObserver.Apex_Class__c);
-    ITriggerObserver activeTriggerObserver = this.createTriggerObserver(apexClass);
-    this.addObserver(activeTriggerOperation, activeTriggerObserver);
-  }
-
-  /************************************************************
-   * Name: addObserver
-   * Description: Add an observer
-   *
-   * @param  List<System.TriggerOperation> triggerOperations
-   * @param  ITriggerObserver triggerObserver
-   * @return void
-   ************************************************************/
-  public void addObserver(List<System.TriggerOperation> triggerOperations, ITriggerObserver triggerObserver){
-    methodName = 'addObserver';
-
-    for (System.TriggerOperation triggerOperation : triggerOperations) {
-      switch on triggerOperation {
-        when BEFORE_INSERT {
-          beforeInsertObservers.add(triggerObserver);
-        }
-        when BEFORE_UPDATE {
-          beforeUpdateObservers.add(triggerObserver);
-        }
-        when BEFORE_DELETE {
-          beforeDeleteObservers.add(triggerObserver);
-        }
-        when AFTER_INSERT {
-          afterInsertObservers.add(triggerObserver);
-        }
-        when AFTER_UPDATE {
-          afterUpdateObservers.add(triggerObserver);
-        }
-        when AFTER_DELETE {
-          afterDeleteObservers.add(triggerObserver);
-        }
-        // AFTER_UNDELETE
-        when else {
-          afterUndeleteObservers.add(triggerObserver);
-        }
-      }
-    }
   }
 
   /*******************************************************
@@ -374,6 +177,210 @@ public abstract class BaseTriggerHandler {
 
     for (ITriggerObserver triggerObserver : afterUndeleteObservers) {
       triggerObserver.onAfterUndelete();
+    }
+  }
+
+  /************************************************************
+   * Name: addObserver
+   * Description: Add an observer
+   *
+   * @param  List<System.TriggerOperation> triggerOperations
+   * @param  ITriggerObserver triggerObserver
+   * @return void
+   ************************************************************/
+  public void addObserver(List<System.TriggerOperation> triggerOperations, ITriggerObserver triggerObserver){
+    methodName = 'addObserver';
+
+    for (System.TriggerOperation triggerOperation : triggerOperations) {
+      switch on triggerOperation {
+        when BEFORE_INSERT {
+          beforeInsertObservers.add(triggerObserver);
+        }
+        when BEFORE_UPDATE {
+          beforeUpdateObservers.add(triggerObserver);
+        }
+        when BEFORE_DELETE {
+          beforeDeleteObservers.add(triggerObserver);
+        }
+        when AFTER_INSERT {
+          afterInsertObservers.add(triggerObserver);
+        }
+        when AFTER_UPDATE {
+          afterUpdateObservers.add(triggerObserver);
+        }
+        when AFTER_DELETE {
+          afterDeleteObservers.add(triggerObserver);
+        }
+        // AFTER_UNDELETE
+        when else {
+          afterUndeleteObservers.add(triggerObserver);
+        }
+      }
+    }
+  }
+
+  /***************************************************
+   * Name: addActiveTriggerOperations
+   * Description: Add some active TriggerOperations
+   *
+   * @param  Trigger_Observer__mdt triggerObserver
+   * @return void
+   ***************************************************/
+  private void addActiveTriggerOperations(Trigger_Observer__mdt triggerObserver) {
+    methodName = 'addActiveTriggerOperations';
+
+    if (!triggerObserver.Active__c) {
+      return;
+    }
+
+    List<System.TriggerOperation> activeTriggerOperation = new List<System.TriggerOperation>();
+
+    if (triggerObserver.Before_Insert__c) {
+      activeTriggerOperation.add(System.TriggerOperation.BEFORE_INSERT);
+    }
+
+    if (triggerObserver.Before_Update__c) {
+      activeTriggerOperation.add(System.TriggerOperation.BEFORE_UPDATE);
+    }
+
+    if (triggerObserver.Before_Delete__c) {
+      activeTriggerOperation.add(System.TriggerOperation.BEFORE_DELETE);
+    }
+
+    if (triggerObserver.After_Insert__c) {
+      activeTriggerOperation.add(System.TriggerOperation.AFTER_INSERT);
+    }
+
+    if (triggerObserver.After_Update__c) {
+      activeTriggerOperation.add(System.TriggerOperation.AFTER_UPDATE);
+    }
+
+    if (triggerObserver.After_Delete__c) {
+      activeTriggerOperation.add(System.TriggerOperation.AFTER_DELETE);
+    }
+
+    if (triggerObserver.After_Undelete__c) {
+      activeTriggerOperation.add(System.TriggerOperation.AFTER_UNDELETE);
+    }
+
+    if (triggerObserver.Test_Only__c) {
+      return;
+    }
+
+    System.Type apexClass = System.Type.forName(triggerObserver.Apex_Class__c);
+    ITriggerObserver activeTriggerObserver = this.createTriggerObserver(apexClass);
+    this.addObserver(activeTriggerOperation, activeTriggerObserver);
+  }
+
+  /*******************************
+   * Name: addObservers
+   * Description: Add observers
+   *
+   * @param  String sObjectName
+   * @return void
+   *******************************/
+  @TestVisible
+  private void addObservers(String sObjectName) {
+    methodName = 'addObservers';
+
+    for (Trigger_Observer__mdt triggerObserver : [
+      SELECT
+        Id,
+        DeveloperName,
+        Object__c,
+        Apex_Class__c,
+        Test_Only__c,
+        Active__c,
+        Before_Insert__c,
+        Before_Update__c,
+        Before_Delete__c,
+        After_Insert__c,
+        After_Update__c,
+        After_Delete__c,
+        After_Undelete__c
+      FROM
+        Trigger_Observer__mdt
+      WHERE
+        Object__c = :sObjectName
+      ORDER BY
+        DeveloperName ASC
+      LIMIT 50000
+    ]) {
+      this.addActiveTriggerOperations(triggerObserver);
+    }
+  }
+
+  /************************************************************
+   * Name: isRecursive
+   * Description: Validate whether this is recursive or not
+   *
+   * @param  none
+   * @return Boolean
+   ************************************************************/
+  private Boolean isRecursive() {
+    methodName = 'isRecursive';
+    logger.stackDebugLog(LOGGING_LEVEL_DEFAULT, CLASS_NAME, methodName, 'firstRun: ' + BaseTriggerHandler.firstRun);
+
+    if (BaseTriggerHandler.firstRun) {
+      return false;
+    } else if (System.TriggerOperation.AFTER_UNDELETE === this.triggerOperationType) {
+      return false;
+    } else {
+      return true;
+    }
+  }
+
+  /********************************************************************************
+   * Name: invoke
+   * Description: Invoke each custom action depending on the Apex DML operations
+   *
+   * @param  none
+   * @return void
+   ********************************************************************************/
+  public void invoke() {
+    methodName = 'invoke';
+
+    System.Savepoint savepoint = Database.setSavepoint();
+    try {
+      if (this.isRecursive()) {
+        return;
+      }
+
+      this.addObservers(this.sObjectName);
+
+      switch on Trigger.operationType {
+        when BEFORE_INSERT {
+          this.onBeforeInsert();
+        }
+        when BEFORE_UPDATE {
+          this.onBeforeUpdate();
+        }
+        when BEFORE_DELETE {
+          this.onBeforeDelete();
+        }
+        when AFTER_INSERT {
+          this.onAfterInsert();
+          BaseTriggerHandler.firstRun = false;
+        }
+        when AFTER_UPDATE {
+          this.onAfterUpdate();
+          BaseTriggerHandler.firstRun = false;
+        }
+        when AFTER_DELETE {
+          this.onAfterDelete();
+          BaseTriggerHandler.firstRun = false;
+        }
+        // AFTER_UNDELETE
+        when else {
+          this.onAfterUndelete();
+          BaseTriggerHandler.firstRun = false;
+        }
+      }
+    } catch (Exception e) {
+      Database.rollback(savepoint);
+      logger.stackDebugLog(LoggingLevel.ERROR, CLASS_NAME, methodName, CommonErrorUtils.createErrorMessage(e));
+    } finally {
+      logger.fetchDebugLogs();
     }
   }
 
